--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -147,13 +147,13 @@
           <li  ng-if="event.status == 'on_sale'">
           <a ng-click="slideTo('#tickets-container')" class="button big">Take me with you.</a>
           <br /><br />
-          <timer end-time="registrationClosesIn"> We start in <strong style="color: white">{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minutes {{seconds}} seconds </strong>
+          <timer end-time="#{data.date_epoch}"> We start in <strong style="color: white">{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minutes {{seconds}} seconds </strong>
           </timer>
           </li>
           <li  ng-if="event.status == 'booked'">
           <a class="button big">Your favorite conference is fully booked.</a>
           <br /><br />
-          <timer end-time="registrationClosesIn"> We start in <strong style="color: white">{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minutes {{seconds}} seconds </strong>
+          <timer end-time="#{data.date_epoch}"> We start in <strong style="color: white">{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minutes {{seconds}} seconds </strong>
           </timer>
           </li>             
         </ul>
