move 2018 event to the front page

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -127,7 +127,7 @@
         <li><a href="https://www.instagram.com/devternity/" rel="noopener" target="_blank"><i class="fa fa-instagram"></i></a></li>
         <li><a href="https://youtube.com/c/DevTernity" rel="noopener" target="_blank"><i class="fa fa-youtube"></i></a></li>    
         each history in data.history
-          <li><a href="../#{history}" alt="DevTernity #{history}">#{history}</a></li>
+          <li><a href="/rix/#{history}" alt="DevTernity #{history}">#{history}</a></li>
       </ul>
     </nav>
   </header>
