raise goes up; background changes

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -440,7 +440,7 @@
           </div>
           <div class="row">
             <section class="12u 12u$(small)">
-              <h5 style="color:black">The discount price is available until {{event.pricing.discount.until | humane}} or with a discount code</h5>
+              <h5 style="color:black"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> The discount price is available until {{event.pricing.discount.until | humane}} or with a discount code</h5>
             </section>
           </div>          
           <div class="row">
