add social links under 'fully booked' button

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -152,6 +152,13 @@
           <li  ng-if="event.status == 'booked'">
           <a class="button big">We are fully booked.</a>
           <br /><br />
+          <ul class="links">
+            <li><a href="https://twitter.com/devternity" rel="noopener" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com/devternity" rel="noopener" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="http://go.devternity.com/linkedin" rel="noopener" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.instagram.com/devternity/" rel="noopener" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://youtube.com/c/DevTernity" rel="noopener" target="_blank"><i class="fa fa-youtube"></i></a></li>    
+          </ul>          
           </li>             
         </ul>
       </section>
