blinking call-to-action

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -137,14 +137,14 @@
         <img src="images/btc_accepted.png" id="btc" />
         <div>
           <img src="images/logo_2017.png" />
-          <h2>&nbsp; DevTernity.</h2>
+          <h2>&nbsp; DevTernity</h2>
         </div>
 
         <p>#{data.desc}</p>
         <p>#{data.date}. #{data.city}, #{data.country}.</p>
         <ul class="actions">
           <li  ng-if="event.status == 'on_sale'">
-          <a ng-click="slideTo('#tickets-container')" class="button big">Take me with you</a>
+          <a id="pulse" ng-click="slideTo('#tickets-container')" class="button big">Take me with you</a>
           <br /><br />
           <timer end-time="#{data.date_epoch}"> We start in <strong style="color: white">{{days}} day{{daysS}}, {{hours}} hour{{hoursS}}, {{minutes}} minutes {{seconds}} seconds </strong>
           </timer>
