responsive Vimeo video

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -265,7 +265,7 @@
       </section>
       <section data-remodal-id="trailer-vimeo" class="wrapper align-center">
           <button data-remodal-action="close" class="remodal-close"></button>
-          <iframe src="https://player.vimeo.com/video/247773795" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>          
+          <div class='embed-container'><iframe src='https://player.vimeo.com/video/247773795' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
       </section>
 
       <section id="speakers-container" class="wrapper speakers align-center">
