padding for Watch Video Trailer button

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -260,7 +260,7 @@
           </div>
         </div>
         <div id="trailer">        
-          <input type="button" value="&nbsp;Watch Video Trailer&nbsp;" ng-click="watchPromo()" />
+          <input type="button" value="&nbsp;&nbsp;Watch Video Trailer&nbsp;&nbsp;" ng-click="watchPromo()" />
         </div>
       </section>
       <section data-remodal-id="trailer-vimeo" class="wrapper align-center">
