align workshop and main day pricing

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -433,7 +433,7 @@
           </div>          
           <div class="row">
             <section class="12u 12u$(small)">
-            <input type="button" value="&nbsp;Secure a seat now&nbsp;" ng-disabled="event.status == 'booked'" ng-click="buy(event.register)" />
+            <input type="button" value="&nbsp;&nbsp;Secure a seat now&nbsp;&nbsp;" ng-disabled="event.status == 'booked'" ng-click="buy(event.register)" />
             </section>
           </div>
             </section>
