no bitcoin discount anymore

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -450,21 +450,15 @@
           <header class="discounts">
             <h2>Special discounts</h2>
             <div class="row">
-            <section class="feature 4u 12u$(small)">
-              <h3 class="title"><i class="fa fa-btc" aria-hidden="true"></i> Bitcoin payments | -{{event.pricing.discount.amount}}€ per day</h3>
-              <div>
-                <p>We make the world a better place by supporting the growth and adoption of cryptocurrency. By paying with Bitcoin you get {{event.pricing.discount.amount}}€ discount per day.</p>
-              </div>
-            </section>
-            <section class="feature 4u 12u$(small)">
-              <h3 class="title">Individuals | -{{event.pricing.discount.amount}}€ per day</h3>
-              <div><p>You are entitled for {{event.pricing.discount.amount}}€ discount per conference day if you are self-funding your participation (not backed by a company).</p>
+            <section class="feature 6u 12u$(small)">
+              <h3 class="title">Individuals</h3>
+              <div><p>We support people who take responsibility for their education. If you are self-funding your participation, you are entitled for a special discount. Please <a href="mailto:{{event.contactEmail}}">drop us</a> an email.</p>
               </div>
             </section>
             <section class="feature 4u 12u$(small)">
               <h3 class="title">Sponsors | -{{event.pricing.discount.amount}}€ per day</h3>
               <div>
-                <p>We provide sponsors with discount for supporting the event. Please <a href="mailto:{{event.contactEmail}}">contact</a> us and receive an exclusive sponsorship offer.
+                <p>We provide sponsors with discount for supporting the event. Please <a href="mailto:{{event.contactEmail}}">contact us</a> and receive an exclusive sponsorship offer.
                 </p>
               </div>
             </section>
