add evangelist discounts

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -450,13 +450,18 @@
           <header class="discounts">
             <h2>Special discounts</h2>
             <div class="row">
-            <section class="feature 6u 12u$(small)">
+            <section class="feature 4u 12u$(small)">
               <h3 class="title">Individuals</h3>
               <div><p>We support people who take responsibility for their education. If you are self-funding your participation, you are entitled for a special discount. Please <a href="mailto:{{event.contactEmail}}">drop us</a> an email.</p>
               </div>
             </section>
             <section class="feature 4u 12u$(small)">
-              <h3 class="title">Sponsors | -{{event.pricing.discount.amount}}€ per day</h3>
+              <h3 class="title">Evangelists</h3>
+              <div><p>Mention us on your blog/page/user group, rate our <a href="https://www.facebook.com/devternity">Facebook page</a> or leave a review on <a href="https://trustpilot.com/review/devternity.com">Trustpilot</a>. Then <a href="mailto:{{event.contactEmail}}">drop us</a> an email and ask for discount.</p>
+              </div>
+            </section>            
+            <section class="feature 4u 12u$(small)">
+              <h3 class="title">Sponsors</h3>
               <div>
                 <p>We provide sponsors with discount for supporting the event. Please <a href="mailto:{{event.contactEmail}}">contact us</a> and receive an exclusive sponsorship offer.
                 </p>
