--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="http://schema.org/Organization" ng-app="devternity" ng-controller="LandingPageController" class="lt-ie9">
+<html lang="en" ng-app="devternity" ng-controller="LandingPageController" class="lt-ie9">
   <head>
 
     <link rel="shortcut icon" type="image/png" href="images/logo_2017_filled.png"/>
@@ -20,18 +20,73 @@
     <meta property="og:image"         content="http://devternity.com/images/logo_2017_filled.png" />
     <meta property="og:image:width"   content="512" />
     <meta property="og:image:height"  content="512" />
-    <meta itemprop="name"             content="DevTernity"/>
-    <meta itemprop="description"      content="The premium-quality annual international software development conference. DevTernity is a place where forward-thinking developers, pragmatic architects and engineering leaders grow."/>
-    <meta itemprop="image"            content="http://devternity.com/images/logo_2017_filled.png"/>
-
-
 
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
     <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
     <script src="js/exit.js"></script>
     <script src="js/all.js"></script>
     <script src="https://connect.facebook.net/en_US/all.js#xfbml=1" async defer></script>
+    script(type="application/ld+json")
+      | {
+      |   "@context": "http://schema.org",
+      |   "@type": "Organization",
+      |   "name": "DevTernity",
+      |   "url": "https://devternity.com",
+      |   "sameAs": [
+      |     "https://www.facebook.com/devternity",
+      |     "https://instagram.com/devternity",
+      |     "https://www.linkedin.com/groups/8371335",
+      |     "https://youtube.com/c/DevTernity",
+      |     "https://twitter.com/devternity"
+      |   ]
+      | }      
 
+    script(type="application/ld+json")
+      | {
+      |   "@context": "http://schema.org",
+      |   "@type": "EducationEvent",
+      |   "name": "#{data.theme}",
+      |   "image": "http://devternity.com/images/logo_2017_filled.png",
+      |   "description": "The premium-quality annual international software development conference in #{data.city}, #{data.country}",
+      |   "startDate": "#{data.date_iso}T09:00",
+      |   "endDate": "#{data.date_iso}T20:00",
+      |   "performer": {
+      |     "@type": "Organization",
+      |     "name": "DevTernity",
+      |     "sameAs": "https://devternity.com/"
+      |   },  
+      |   "offers": [
+      |     {
+      |         "@type": "Offer",
+      |         "url": "#{data.register}?main",
+      |         "name": "Main Day",
+      |         "validFrom": "#{data.build_time_iso}",
+      |         "price": "#{data.pricing ? data.pricing.products[0].price : ''}",
+      |         "priceCurrency": "EUR",
+      |         "availability": "http://schema.org/InStock"
+      |       },  
+      |     {
+      |         "@type": "Offer",
+      |         "name": "Workshop",        
+      |         "url": "#{data.register}?workshop",
+      |         "validFrom": "#{data.build_time_iso}",
+      |         "price": "#{data.pricing ? data.pricing.products[1].price : ''}",
+      |         "priceCurrency": "EUR",
+      |         "availability": "http://schema.org/InStock"
+      |       }      
+      |   ],
+      |   "location": {
+      |     "@type": "Place",
+      |     "address": {
+      |       "@type": "PostalAddress",
+      |       "addressLocality": "#{data.city}",
+      |       "addressRegion": "#{data.country}",
+      |       "postalCode": "#{data.venue_postal_code}",      
+      |       "streetAddress": "#{data.venue_address}"
+      |     },
+      |     "name": "#{data.venue_name}"
+      |   }
+      | }      
     script
       | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       | (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
